<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="25dp"
    android:background="@drawable/bg3"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
...
    <TextView
        android:id="@+id/cat_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is default text. Hopefully it changes."
        android:textSize="30sp"
        android:layout_below="@+id/drawerToggler"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <ImageView
        android:id="@+id/miaomiaomiao"
        android:layout_width="wrap_content"
...
