<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.areyoukittyme.VocabStudyActivity">


    <TextView
        android:id="@+id/Question_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout">

        <Button
            android:id="@+id/FirstOption_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryLight"
            android:text="Button" />

        <Button
            android:id="@+id/SecondOption_button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryLight"
            android:text="Button" />

        <Button
            android:id="@+id/ThirdOption_button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryLight"
            android:text="Button" />

        <Button
            android:id="@+id/FourthOption_button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryLight"
            android:text="Button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Known_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Know" />

        <Button
            android:id="@+id/NotKnown_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Do not know" />

        <Button
            android:id="@+id/Next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Next" />

    </LinearLayout>

</RelativeLayout>