<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.areyoukittyme.VocabActivity">

    <TextView
        android:id="@+id/vocab_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="296dp"
        tools:layout_editorabsoluteX="30dp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <Button
        android:id="@+id/vocab_Review_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/colorAccentLight"
        android:text="Review"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/vocab_study_button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/vocab_study_button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/colorAccentLight"
        android:text="Study"
        android:textSize="12sp"
        android:layout_below="@+id/Vocab_textView2"
        android:layout_alignEnd="@+id/Vocab_textView2"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20dp" />
    <TextView
        android:id="@+id/Vocab_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/vocab_textView"
        android:layout_alignStart="@+id/vocab_textView" />

    <ProgressBar
        android:id="@+id/vocab_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vocab_textView"
        android:layout_alignEnd="@+id/vocabulary_button" />

    <Button
        android:id="@+id/vocabulary_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryLight"
        android:text="Vocabulary"
        android:textSize="12sp"
        android:layout_marginStart="55dp"
        android:layout_alignBottom="@+id/vocab_Review_button"
        android:layout_toEndOf="@+id/vocab_textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="350dp"
        app:srcCompat="@drawable/catnormal0011"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

</RelativeLayout>
